# wxpay-devkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
examples/: native_payment.py
promo/: juejin-article.md  v2ex-post.md
src/: __init__.py  client.py  decrypt.py  signer.py
tests/: test_core.py
