[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wxpay-devkit"
version = "1.0.0"
description = "微信支付 API v3 开发者工具箱 —— 签名、验签、回调解密、下单、退款一站式解决"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WxPay DevKit Contributors"}
]
keywords = ["wechat", "wechat-pay", "微信支付", "payment", "wxpay"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/20111110wyx-droid/wxpay-devkit"
Documentation = "https://github.com/20111110wyx-droid/wxpay-devkit#readme"
Repository = "https://github.com/20111110wyx-droid/wxpay-devkit"
Issues = "https://github.com/20111110wyx-droid/wxpay-devkit/issues"

[tool.setuptools.packages.find]
include = ["src*"]
